--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         <div class="home-contact">
             <a href="http://weibo.com/qiulihachi" target="_blank" style="margin-left:-5px;"><img src="http://www.weibo.com/favicon.ico" alt="" width="25"/></a>
             <a href="http://www.douban.com/people/rogerAce/" target="_blank" style="text-align:center;"><img src="http://www.douban.com/favicon.ico" alt="" width="22"/></a>
-            <a href="http://qiulilee.lofter.com/" target="_blank" style="text-align:right"><img src="http://www.lofter.com/favicon.ico" alt="" width="22"/></a>
+            <a href="https://github.com/lirenlong" target="_blank" style="text-align:right"><img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png" alt="" width="22"/></a>
         </div>
     </div>
 
