--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <!--
-    * Author:         BeiYuu
+    * Author:         Roger秋骊
     -->
     <meta charset="utf-8" />
     <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
     <meta name="author" content="BieYuu" />
-    <meta name="description" content="BeiYuu's Blog" />
+    <meta name="description" content="Roger秋骊's Blog" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="/css/default.css" type="text/css" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
