--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,6 @@
 /**
- * Author:           BeiYuu
- * Contact:          beiyuu.com
+ * Author:           Roger秋骊
+ * Contact:          lirenlong.github.io
  */
 
 /* 重置浏览器CSS */
